--- a/templates/match.html
+++ b/templates/match.html
@@ -137,7 +137,7 @@
                     <table style="margin: 0; font-size: 0.9em;">
                         <thead>
                             <tr>
-                                <th>Time{% if display_prefs.time_display == 'local' %} (Local){% else %} (UTC){% endif %}</th>
+                                <th>Time{% if display_prefs.time_display == 'local' and display_prefs.home_grid %} (Local){% else %} (UTC){% endif %}</th>
                                 <th>DX Call</th>
                                 <th>Mode</th>
                                 <th>Power</th>
