--- a/templates/medals.html
+++ b/templates/medals.html
@@ -45,7 +45,7 @@
                                 <th style="padding: 4px 8px;">Match</th>
                                 <th style="padding: 4px 8px;">Medal</th>
                                 <th style="padding: 4px 8px;">DX Call</th>
-                                <th style="padding: 4px 8px;">Time{% if display_prefs.time_display == 'local' %} (Local){% else %} (UTC){% endif %}</th>
+                                <th style="padding: 4px 8px;">Time{% if display_prefs.time_display == 'local' and display_prefs.home_grid %} (Local){% else %} (UTC){% endif %}</th>
                                 <th style="padding: 4px 8px;">Mode</th>
                                 <th style="padding: 4px 8px;">Power</th>
                                 <th style="padding: 4px 8px;">Distance</th>
