--- a/templates/admin/audit_log.html
+++ b/templates/admin/audit_log.html
@@ -37,7 +37,7 @@
         <tbody>
             {% for log in logs %}
             <tr>
-                <td>{{ log.timestamp | format_datetime }}</td>
+                <td>{{ log.timestamp | format_datetime(display_prefs.home_grid, display_prefs.time_display) }}</td>
                 <td>{% if log.actor_callsign %}<a href="/competitor/{{ log.actor_callsign }}">{{ log.actor_first_name | competitor_display(log.actor_callsign) }}</a>{% else %}-{% endif %}</td>
                 <td>{{ log.action }}</td>
                 <td>
