--- a/templates/match.html
+++ b/templates/match.html
@@ -149,7 +149,7 @@
                         <tbody>
                             {% for qso in qso_details[medal.callsign] %}
                             <tr>
-                                <td>{{ qso.time | format_datetime(display_prefs.home_grid, display_prefs.time_display) }}{% if qso.my_park %} <span title="Activated from {{ qso.my_park }}">📡</span>{% endif %}</td>
+                                <td>{{ qso.time | format_datetime(qso.my_grid or display_prefs.home_grid, display_prefs.time_display) }}{% if qso.my_park %} <span title="Activated from {{ qso.my_park }}">📡</span>{% endif %}</td>
                                 <td><strong>{{ qso.dx_callsign }}</strong>{% if qso.park %} <span style="color: var(--text-secondary);">({{ qso.park }})</span>{% endif %}</td>
                                 <td>{{ qso.mode or '-' }}</td>
                                 <td>{% if qso.power %}{{ qso.power }}W{% else %}-{% endif %}</td>
